workspaces/DC Dev/DC Dev/src/objects/Event__c.object
<CustomObject>
    <description>Holds the JSON of the records that need to be processed.</description>
    <fields>
        <fullName>JSON__c</fullName>
        <description>Holds the actual JSON.</description>
        <label>JSON</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to true  once the JSON is processed and the records are created.</description>
        <label>Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>